@startuml

class SceneManager{
    main()
    start()
}
class InventoryController{

    -TextField: valueField, numField, nameField, searchField
    -TableView<InventoryContents>: table

    -TableColumn<InventoryContents,String>: value

    -TableColumn<InventoryContents,String>: serial

    -TableColumn<InventoryContents,String>: name

    ObservableList<InventoryController>: list

    SaveController: saving
    LoadController: loading
    ErrorController: error

    + initialize
    + searchFilter()
    + addClicked()
    + removeClicked()
    + saveClicked()
    + loadClicked()
    + add()
    + remove()
    + save()
    + load()
    + valueEdited()
    + serialEdited()
    + nameEdited()
}
class InventoryContents{

    -String value
    -String serial
    -String name

    +InventoryContents()
    +getValue
    +getSerial
    +getName
    +setValue
    +setSerial
    +setName
    +toString()
}
class SaveController{

   +tsv()
   +html()
   +json()
}
class LoadController{

   +tsv()
   +html()
   +json()
}
class ErrorController{

   +name()
   +serial()
   +value()
}


SceneManager <--InventoryController
InventoryController *-- InventoryContents
InventoryController *-- SaveController
InventoryController *-- LoadController
InventoryController *-- ErrorController

@enduml